[package]
name = "patch-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
iced = { version = "0.12", features = ["tokio"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio   = { version = "1", features = ["rt-multi-thread", "macros"] }

# Dados
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
anyhow       = "1"
directories  = "5"

# Util
once_cell = "1"